--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-partial-response": "^1.0.4",
+    "express-validator": "^6.12.1",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1"
   }
