--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-partial-response": "^1.0.4",
     "express-validator": "^6.12.1",
     "lodash": "^4.17.21",
+    "luxon": "^2.0.2",
     "mariadb": "^2.5.4",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.0",
